--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -41,42 +41,51 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>AngularJS</h1>
-					<h3>The superheroic JavaScript MVW Framework</h3>
+					<img src="img/AngularJS.png" style="border: 0" />
+					<h3>The superheroic MVW Framework</h3>
 					<p>
 						<small>Presentation by <a href="http://jberndsen.nl">Jeroen Berndsen</a></small>
 					</p>
 				</section>
 
-				<section>
-					<h2>Hello There</h2>
+				<section data-background="img/jeroenberndsen.jpg">
+					<div style="text-align: left; float: left; width: 50%;">
+					<h2>Hello There!</h2>
 					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+						<!-- some text about me? -->
 					</p>
+				</div>
 				</section>
+
+				<section>
+					<h2>Topics</h2>
+						<ul>
+							<li class="fragment roll-in">History of ASP.NET</li>
+							<li class="fragment roll-in">Why AngularJS</li>
+							<li class="fragment roll-in">.NET integration</li>
+							<li class="fragment roll-in">Tools!</li>
+						</ul>
+					</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
-						<br>
-						<a href="#" class="navigate-down">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
+						<h2>A short history lesson</h2>
 					</section>
 					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+						<h3>ASP.NET introduced in 2002</h3>
+						<p>Code reuse: User Controls</p>
+						<p>Seperation: Code-behind files</p>
+						<small>remember page life cycles?</small>
 					</section>
 					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
-						<br>
-						<a href="#/2">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
+							<h3>.NET 3.0 introduced in late 2006</h3>
+							<p>WPF, WCF, WWF, Windows Cardspace</p>
+							<p>.NET 3.5 late 2007, introducing LINQ</p>
+					</section>
+					<section>
+						<h3>.NET 4.0 introduced in 2010</h2>
+						<p>ASP.NET MVC 2</p>
 					</section>
 				</section>
 
