--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -14,8 +14,10 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
+
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/inputs.css">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -67,15 +69,15 @@
 						</ul>
 					</section>
 
-				<!-- Example of nested vertical slides -->
+				<!-- nested vertical slides -->
 				<section>
 					<section>
 						<h2>A short history lesson</h2>
 					</section>
 					<section>
 						<h3>ASP.NET introduced in 2002</h3>
-						<p>Code reuse: User Controls</p>
-						<p>Seperation: Code-behind files</p>
+						<p>User Controls</p>
+						<p>Code-behind files</p>
 						<small>remember page life cycles?</small>
 					</section>
 					<section>
@@ -86,14 +88,24 @@
 					<section>
 						<h3>.NET 4.0 introduced in 2010</h2>
 						<p>ASP.NET MVC 2</p>
+						<!-- voordelen van MVC uitleggen -->
 					</section>
 				</section>
 
 				<section>
-					<h2>Slides</h2>
-					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slides.com" target="_blank">http://slides.com</a>.
-					</p>
+					<div ng-app="app">
+					<h2>Data binding</h2>
+						<p>Hello, {{name}}!</p>
+						<input type="text" ng-model="name">
+					</div>
+					<br />
+						<pre><code data-trim>
+&lt;div ng-app="app"&gt;
+   &lt;h2&gt;Data binding&lt;/h2&gt;
+   &lt;p&gt;Hello, {{name}}!&lt;/p&gt;
+   &lt;input type=&quot;text&quot; ng-model=&quot;name&quot;&gt;
+&lt;/div&gt;
+							</code></pre>
 				</section>
 
 				<section>
@@ -387,9 +399,10 @@ Reveal.addEventListener( 'customevent', function() {
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+		<script src="app.js"></script>
 
 		<script>
-
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
