--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -43,7 +43,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<img src="img/AngularJS.svg" style="border: 0; background: none; box-shadow: none" />
+					<img src="img/angularjs.svg" style="border: 0; background: none; box-shadow: none" />
 					<h3>The superheroic MVW Framework</h3>
 					<p>
 						<small>Presentation by <a href="http://jberndsen.nl">Jeroen Berndsen</a></small>
