--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -95,8 +95,9 @@
 					<section>
 						<h2>Cloud based reactive systems and big data (<strong>2010 - now</strong>)</h2>
 						<p class="orange">.NET 4.0 introduced in 2010</p>
-						<p class="fragment">ASP.NET MVC 2</p>
+						<p class="fragment">ASP.NET MVC</p>
 						<p class="fragment">Parallel LINQ, Task Parallel Library</p>
+						<p class="fragment">Cloud architecture patterns: CQRS, Event sourcing, etc.</p>
 					</section>
 				</section>
 
