--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -196,15 +196,8 @@
 
 				<section>
 					<section>
-						<h2>.NET integration</h2>
-						<p class="orange">It's easy!</p>
-						<p class="fragment">Just add a reference to angular.min.js</p>
-					</section>
-				</section>
-
-				<section>
-					<section>
 						<h2>Tools</h2>
+						<p class="orange">Angular has lots of friends</p>
 						<p>Plays nice with all those other neat libraries</p>
 					</section>
 					<section>
@@ -231,6 +224,43 @@
 
 				<section>
 					<section>
+						<h2>.NET integration</h2>
+						<p class="orange">It's easy!</p>
+						<blockquote>It is not the strongest or the most intelligent who will survive but those who can best manage change. --Charles Darwin</blockquote>
+					</section>
+					<section>
+						<h2>Start small</h2>
+						<p class="orange">Integrate in sections of your current project</p>
+						<p class="fragment">Just add a reference to angular.min.js</p>
+						<p class="fragment">Add client-side form validation</p>
+						<p class="fragment">Smooth transitions, filtering, sorting, etc.</p>
+						<p class="fragment">Client-side routing</p>
+					</section>
+					<section>
+						<h2>Adapt</h2>
+						<p class="orange">Wire up a back-end</p>
+						<p class="fragment">1: Map the UI router to MVC routes</p>
+						<p class="fragment">2: Migrate to REST using Web API</p>
+					</section>
+					<section>
+						<h2>Embrace</h2>
+						<p class="orange">Full seperation between client and server</p>
+						<p class="fragment">Component segegration (e.g. Authorization servers / microservices)</p>
+						<p class="fragment">Decouple from IIS (OWIN is default in vNext)</p>
+						<p class="fragment">Switch to cloud hosting on Azure (Worker roles)</p>
+					</section>
+					<section>
+						<h2>Conquer</h2>
+						<p class="orange">Scale out! You really rock now!</p>
+						<p class="fragment">Reactive event-driven systems</p>
+						<p class="fragment">High performance, high availability, high everything</p>
+						<p class="fragment">Enterprise scale big data</p>
+						<p class="fragment">Web Sockets (SignalR)</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
 						<h2>The future, today!</h2>
 						<p class="orange">Let me <strong>inspire</strong> you</p>
 					</section>
@@ -239,9 +269,6 @@
 					</section>
 					<section>
 						<h2>Material Design</h2>
-					</section>
-					<section>
-						<h2>Reactive UIs</h2>
 					</section>
 				</section>
 			</div>
