--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -269,6 +269,7 @@
 					</section>
 					<section>
 						<h2>Material Design</h2>
+						<video class="stretch" controls src="img/gmd-hd.mp4"></video>
 					</section>
 				</section>
 			</div>
