added ionic video

--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -266,6 +266,7 @@
 					</section>
 					<section>
 						<h2>The Ionic Framework</h2>
+						<video class="stretch" controls src="img/gmd-hd.mp4"></video>
 					</section>
 					<section>
 						<h2>Material Design</h2>
