--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -138,7 +138,8 @@
 					<section>
 						<div id="databinding1">
 							<h2>Data binding</h2>
-							<p>Hello, {{name}}!</p>
+							<p class="orange">Bind data to views</p>
+							<p>Hello {{name}}!</p>
 							<input type="text" ng-model="name">
 						</div>
 						<br />
@@ -146,7 +147,7 @@
 						<pre><code data-trim>
 &lt;div ng-app="app"&gt;
    &lt;h2&gt;Data binding&lt;/h2&gt;
-   &lt;p&gt;Hello, {{name}}!&lt;/p&gt;
+   &lt;p&gt;Hello {{name}}!&lt;/p&gt;
    &lt;input type=&quot;text&quot; ng-model=&quot;name&quot;&gt;
 &lt;/div&gt;
 					</code></pre>
@@ -161,6 +162,7 @@
 					<section>
 							<div id="databinding2" ng-init="price=1;quantity=1;">
 								<h2>Data binding</h2> <!-- templates / views / compiler -->
+								<p class="orange">Templates, expressions, views, $compile</p>
 								<input type="text" ng-model="price"><br />
 								<input type="text" ng-model="quantity"><br />
 								<b>Total: </b>{{price * quantity | currency}}
@@ -168,12 +170,12 @@
 							<br />
 
 							<pre><code data-trim>
-	&lt;div ng-app="app" ng-init="price=1;quantity=1;"&gt;
-		&lt;h2&gt;Data binding&lt;/h2&gt;
-		&lt;input type=&quot;text&quot; ng-model=&quot;price&quot;&gt;&lt;br /&gt;
-		&lt;input type=&quot;text&quot; ng-model=&quot;quantity&quot;&gt;&lt;br /&gt;
-		&lt;b&gt;Total: &lt;/b&gt;{{price * quantity | currency}}
-	&lt;/div&gt;
+&lt;div ng-app="app" ng-init="price=1;quantity=1;"&gt;
+  &lt;h2&gt;Data binding&lt;/h2&gt;
+  &lt;input type=&quot;text&quot; ng-model=&quot;price&quot;&gt;&lt;br /&gt;
+  &lt;input type=&quot;text&quot; ng-model=&quot;quantity&quot;&gt;&lt;br /&gt;
+  &lt;b&gt;Total: &lt;/b&gt;{{price * quantity | currency}}
+&lt;/div&gt;
 							</code></pre>
 					</section>
 					<script type="text/javascript">
@@ -192,9 +194,10 @@
 
 					<section>
 						<h2>Controllers</h2>
+						<p class="orange">Add logic to views</p>
 						<div id="controllers1">
 							<div ng-controller="TodoController">
-								<p class="orange">{{remaining()}} of {{todos.length}} remaining</p><br />
+								<i>{{remaining()}} of {{todos.length}} remaining</i>
 									<div ng-repeat="todo in todos">
 										<input type="checkbox" ng-model="todo.done">
 										<span class="done-{{todo.done}}">{{todo.text}}</span>
@@ -217,7 +220,7 @@
 						<p class="orange">index.html</p>
 						<pre><code data-trim>
 &lt;div ng-controller="TodoController"&gt;
-  &lt;p"&gt;{{remaining()}} of {{todos.length}} remaining&lt;/p&gt;&lt;br /&gt;
+  &lt;i&gt;{{remaining()}} of {{todos.length}} remaining&lt;/i&gt;&lt;br /&gt;
     &lt;div ng-repeat="todo in todos"&gt;
       &lt;input type="checkbox" ng-model="todo.done"&gt;
       &lt;span class="done-{{todo.done}}"&gt;{{todo.text}}&lt;/span&gt;
@@ -235,7 +238,7 @@
 						<p class="orange">todo.js</p>
 						<pre><code data-trim>
 var app = angular.module("app", []);
-app.controller('TodoController', ['$scope', function ($scope) {
+app.controller('TodoController', function ($scope) {
   $scope.todos = [
     {text:'learn angular', done:true},
     {text:'build an angular app', done:false}];
@@ -252,7 +255,7 @@ app.controller('TodoController', ['$scope', function ($scope) {
     });
     return count;
   };
-}]);
+});
 						</code></pre>
 					</section>
 
@@ -263,7 +266,104 @@ app.controller('TodoController', ['$scope', function ($scope) {
 
 					<section>
 						<h2>Services</h2>
-						<p>Dependency injection: declare what you need</p>
+						<p class="orange">Move view independent business logic to reusable modules</p>
+						<div id="services1">
+							<div ng-controller="InvoiceController as invoice">
+								<div>
+									Quantity: <input type="number" min="0" ng-model="invoice.qty">
+								</div>
+								<div>
+									Costs: <input type="number" min="0" ng-model="invoice.cost">
+									<select ng-model="invoice.inCurr">
+										<option ng-repeat="c in invoice.currencies">{{c}}</option>
+									</select>
+								</div>
+								<div>
+									<b>Total:</b><br />
+									<span ng-repeat="c in invoice.currencies">
+										{{invoice.total(c) | currency:c}}<br />
+									</span>
+								</div>
+							</div>
+						</div>
+					</section>
+					<script type="text/javascript">
+						var e4 = document.getElementById("services1");
+						angular.element(e4).ready(function() {
+							angular.bootstrap(e4, ['app']);
+						});
+					</script>
+
+					<section>
+						<h2>Services</h2>
+						<p class="orange">index.html</p>
+						<pre><code data-trim>
+&lt;div ng-controller="InvoiceController as invoice"&gt;
+  &lt;div&gt;
+    Quantity: &lt;input type="number" min="0" ng-model="invoice.qty"&gt;
+  &lt;/div&gt;
+  &lt;div&gt;
+    Costs: &lt;input type="number" min="0" ng-model="invoice.cost"&gt;
+    &lt;select ng-model="invoice.inCurr"&gt;
+      &lt;option ng-repeat="c in invoice.currencies"&gt;{{c}}&lt;/option&gt;
+    &lt;/select&gt;
+  &lt;/div&gt;
+  &lt;div&gt;
+    &lt;b&gt;Total:&lt;/b&gt;&lt;br /&gt;
+    &lt;span ng-repeat="c in invoice.currencies"&gt;
+      {{invoice.total(c) | currency:c}}&lt;br /&gt;
+    &lt;/span&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+						</code></pre>
+					</section>
+
+					<section>
+						<h2>Services</h2>
+						<p class="orange">controllers.js</p>
+						<pre><code data-trim>
+app.controller('InvoiceController', function(currencyConverter) {
+  this.qty = 1;
+  this.cost = 2;
+  this.inCurr = 'EUR';
+  this.currencies = currencyConverter.currencies;
+
+  this.total = function total(outCurr) {
+    return currencyConverter.convert(this.qty * this.cost,
+		   this.inCurr, outCurr);
+  };
+});
+						</code></pre>
+					</section>
+
+					<section>
+						<h2>Services</h2>
+						<p class="orange">finance.js</p>
+						<pre><code data-trim>
+angular.module('finance', []).factory('currencyConverter',
+  function() {
+		
+  var currencies = ['USD', 'EUR', 'CNY'];
+  var usdToForeignRates = {
+    USD: 1,
+    EUR: 0.74,
+    CNY: 6.09
+  };
+  var convert = function (amount, inCurr, outCurr) {
+    return amount * (usdToForeignRates[outCurr] /
+		    usdToForeignRates[inCurr]);
+  };
+
+  return {
+    currencies: currencies,
+    convert: convert
+  };
+});
+						</code></pre>
+					</section>
+
+					<section>
+						<img src="img/concepts-module-service.png" style="border: 0; background: none; box-shadow: none" />
 					</section>
 
 					<section>
@@ -283,7 +383,7 @@ app.controller('TodoController', ['$scope', function ($scope) {
 					<section>
 						<h2>Routing</h2>
 						<p>use it to build SPAs</p>
-					</section>				
+					</section>
 				</section>
 
 				<section>
